1.改为非模块化项目
2.新增主界面布局